=== 0.0.3 / 2010-10-??

== New Features
* works with gradle

== Improvements
* bumped ivy version to 2.2.0
* updated maven plugins

=== 0.0.2 / 2010-10-08

== Improvements
* bumped vraptor version to 3.2.0

=== 0.0.1 / 2010-10-05

== New Features
* jsp support
* base package
* works with ant + ivy
* help command

== Improvements
* Better use of Generics.
* Update Hibernate

=== 0.0.1.rc / 2010-08-24

== New Features
* Added Hamcrest 1.1
* Added text support(textarea).

== Improvements
* Create forder to put images.

== Bugfixes
* Works on windows OS.

=== 0.0.1.beta4 / 2010-08-04

== New Features
* Added generic repository.
* Scaffold repository to each model.
* Now controllers use repository instead entity manager.
* Generated models come with hashCode and equals.
* Generating fake tests to models, controllers and repositories.

== Improvements
* Better freemarker views.
* UTF-8 default enconding.
* Update jetty maven plugin version(6 to 7).

=== 0.0.1.beta4 / 2010-07-16

== New Features
* Added validator support with hibernate-validator.
* Error Messages.
* Redirect to form when occur validation erros.
* Added joda time dependency.
* Create messages.properties(i18n).
  
== Bugfixes
* Fixed i.e problems.

=== 0.0.1.beta3 / 2010-07-11

== New Features
* Added command to start web server(jetty).
* Added boolean support.

== Improvements
* Bumped vraptor version to 3.1.3.
* Change log4j.xml to log4j.properties.
* Change views directory from WEB-INF/freemarker to WEB-INF/views.
* Change hsqldb to use file instead of memory.
  
== Bugfixes
* Fixed pom when creating project with path like /home/rodolfo/project.
* Fixed runtime dependencies.

=== 0.0.1.beta2 / 2010-07-07
  * Crud with vraptor, maven 2, jpa, freemarker e jquery.   